[metadata]
name = paxes-cinder
version = 2015.1
summary = 'OpenStack Block Storage extension'
home-page = 'http://www.openstack.org/'
author = 'New cloud open stack development team'
author-email = 'openstack-dev@teamsun.com.cn'
license = ''
description-file = 
    README.txt
platform = ''
classifier = 
    Environment :: OpenStack
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6


[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    paxes_cinder

data_files = 
    /etc/paxesSQL =
        etc/sql/cinder_DB2_to_MYSQL.sql
    /etc/cinder =
        etc/cinder/api-paste.ini
        etc/cinder/cinder.conf
        etc/cinder/fabrics.conf
        etc/cinder/policy.json
        etc/cinder/rootwrap.conf
    /etc/cinder/rootwrap.d =
        etc/cinder/rootwrap.d/volume.filters

scripts = 
    bin/openstack-config
    bin/paxescinder-dbsync

[entry_points]
cinder.scheduler.filters = 
    PowerVCCapacityFilter = paxes_cinder.scheduler.filters.paxes_capacity_filter:PowerVCCapacityFilter
    StorageProtocolFilter = paxes_cinder.scheduler.filters.storage_protocol_filter:StorageProtocolFilter
cinder.api.v2.extensions = 
    storage_providers = paxes_cinder.api.plugins.storage_providers:Storage_providers

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
